vaultwarden (1.27.0-3) unstable; urgency=medium

  * doesn't make sense to sign deb packages after changes file has already
    made checksums and been signed

 -- dionysius <dragon.dionysius@gmail.com>  Sun, 15 Jan 2023 14:54:26 +0100
vaultwarden (1.27.0-2) unstable; urgency=medium

  * use reusable github actions workflow
  * sign packages
  * offer debian stable
  * offer some cross builds

 -- dionysius <dragon.dionysius@gmail.com>  Sun, 15 Jan 2023 14:54:26 +0100

vaultwarden (1.27.0-1) unstable; urgency=medium

  * log folder not needed anymore
  * dbgsym lintian overrides are not detected
  * gbp push handles upstream as well
  * Comment debian packaging policy
  * remove duplicate libmariadb-dev build-depends
  * Add hint to github actions as CI, planned TODOs

 -- dionysius <dragon.dionysius@gmail.com>  Sun, 01 Jan 2023 04:08:47 +0100

vaultwarden (1.27.0-0alpha8) unstable; urgency=medium

  * set vaultwarden maintainer defaults

 -- dionysius <dragon.dionysius@gmail.com>  Sat, 31 Dec 2022 06:01:33 +0100

vaultwarden (1.27.0-0alpha7) unstable; urgency=medium

  * tiny rename of a make variable
  * include rust also as candidate
  * compile fails, disable lto

 -- dionysius <dragon.dionysius@gmail.com>  Fri, 30 Dec 2022 07:36:35 +0100

vaultwarden (1.27.0-0alpha6) unstable; urgency=medium

  * add issue url to lintian override of openssl linking license conflict
  * add doc url to cargo profiles
  * add optimization with debug flags

 -- dionysius <dragon.dionysius@gmail.com>  Thu, 29 Dec 2022 07:28:29 +0100

vaultwarden (1.27.0-0alpha5) unstable; urgency=medium

  * add github actions to package on debian tags and release them
  * define lintian overrides
  * prefer optimizations over debug symbols for now

 -- dionysius <dragon.dionysius@gmail.com>  Thu, 29 Dec 2022 06:41:29 +0100

vaultwarden (1.27.0-0alpha4) unstable; urgency=medium

  * no normal switch to other branch so we can remove argument in readme
  * fix username in changelog