@@ -27,23 +27,23 @@ jobs:
         rustup toolchain install stable
     secrets:
       GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-  build-qemu:
-    uses: dionysius/gbp-gha/.github/workflows/gbp-qemu.yml@main
-    with:
-      # https://github.com/orgs/community/discussions/26671
-      DEBFULLNAME: dionysius (github-actions)
-      DEBEMAIL: dragon.dionysius+gha@gmail.com
-      before_build_deps_install: |
-        export HOME=/root
-        source "/root/.cargo/env" || true
-        if ! command -v rustup > /dev/null; then
-          curl https://sh.rustup.rs -sSf | sh -s -- -y
-          source "/root/.cargo/env"
-        fi
-        rustup toolchain install stable
-    secrets:
-      GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+  # build-qemu:
+  #   uses: dionysius/gbp-gha/.github/workflows/gbp-qemu.yml@main
+  #   with:
+  #     # https://github.com/orgs/community/discussions/26671
+  #     DEBFULLNAME: dionysius (github-actions)
+  #     DEBEMAIL: dragon.dionysius+gha@gmail.com
+  #     before_build_deps_install: |
+  #       export HOME=/root
+  #       source "/root/.cargo/env" || true
+  #       if ! command -v rustup > /dev/null; then
+  #         curl https://sh.rustup.rs -sSf | sh -s -- -y
+  #         source "/root/.cargo/env"
+  #       fi
+  #       rustup toolchain install stable
+  #   secrets:
+  #     GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
   release:
     if: startsWith(github.event.ref, 'refs/tags/debian')
-    needs: [build-native, build-qemu]
+    needs: [build-native]
     uses: dionysius/gbp-gha/.github/workflows/release.yml@main
